[gd_scene load_steps=5 format=3 uid="uid://c8i3cvso5yx7n"]

[ext_resource type="Script" uid="uid://b0g05gunsfh4u" path="res://src/ui/components/chat/chat_message.gd" id="1_ppxi6"]
[ext_resource type="PackedScene" uid="uid://c6jl46ahx31ud" path="res://src/ui/components/profile_picture/profile_picture.tscn" id="2_gw0bh"]
[ext_resource type="Texture2D" uid="uid://bx7w4x7t54ai8" path="res://assets/check-mark.svg" id="3_qhmmi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq752"]
bg_color = Color(0, 0, 0, 0.623529)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ChatMessage" type="VBoxContainer"]
offset_right = 568.0
offset_bottom = 63.0
script = ExtResource("1_ppxi6")

[node name="RichTextLabel_CompactChat" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="HBoxContainer_ExtendedChat" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ProfilePicture" parent="HBoxContainer_ExtendedChat" instance=ExtResource("2_gw0bh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer_ExtendedChat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_fq752")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer_ExtendedChat/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer"]
layout_direction = 2
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="NicknameTag" type="HBoxContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 1

[node name="Label_Nickname" type="Label" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "nickname"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag"]
layout_mode = 2

[node name="Hash" type="HBoxContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label_Tag" type="Label" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag/HBoxContainer/Hash"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.493545, 0.493546, 0.493546, 1)
theme_override_font_sizes/font_size = 12
text = "xxxx"

[node name="ClaimedCheckmark" type="MarginContainer" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/NicknameTag/HBoxContainer/ClaimedCheckmark"]
layout_mode = 2
texture = ExtResource("3_qhmmi")
expand_mode = 2
stretch_mode = 4

[node name="RichTextLabel_Message" type="RichTextLabel" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "message"
fit_content = true
scroll_active = false

[node name="Label_Timestamp" type="Label" parent="HBoxContainer_ExtendedChat/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.572988, 0.572988, 0.572988, 1)
theme_override_font_sizes/font_size = 8
text = "14:15"
horizontal_alignment = 2
